@@ -5,6 +5,7 @@ import logging
 
 import numpy as np
 import obspy
+from obspy.core import Stream
 from obspy.geodetics import gps2dist_azimuth
 from obspy.signal.cross_correlation import correlate as obscorr
 from scipy.fftpack import fft, ifft, fftshift, ifftshift, next_fast_len
@@ -350,58 +351,133 @@ def correlate(io, day, outkey,
                **preprocessing_kwargs)
     # start correlation
     next_day = day + 24 * 3600
-    for tr1, tr2 in itertools.combinations_with_replacement(stream, 2):
-        # skip unwanted combinations
-        station1 = tr1.stats.network + '.' + tr1.stats.station
-        station2 = tr2.stats.network + '.' + tr2.stats.station
-        comps = tr1.stats.channel[-1] + tr2.stats.channel[-1]
+    stations = [tr.id[:-1] for tr in stream]
+    log.debug(components)
+    log.debug(stations)
+    for station1, station2 in itertools.combinations_with_replacement(
+            stations, 2):
         if only_auto_correlation and station1 != station2:
             continue
         if station_combinations and not any(set(station_comb.split('-')) == (
-                {station1, station2} if '.' in (station_comb) else
-                {tr1.stats.station, tr2.stats.station})
+                {station1.rsplit('.', 2)[0], station2.rsplit('.', 2)[0]}
+                if '.' in (station_comb) else
+                {station1.split('.')[1], station2.split('.')[1]})
                 for station_comb in station_combinations):
             continue
-        if component_combinations and (
-                comps not in component_combinations and
-                comps[::-1] not in component_combinations):
-            continue
-        # calculate distance and azimuth
-        c1 = inventory.get_coordinates(tr1.id, datetime=tr1.stats.endtime)
-        c2 = inventory.get_coordinates(tr2.id, datetime=tr2.stats.endtime)
+        stream1 = Stream([tr for tr in stream if tr.id[:-1] == station1])
+        stream2 = Stream([tr for tr in stream if tr.id[:-1] == station2])
+        c1 = inventory.get_coordinates(
+                stream1[0].id, datetime=stream1[0].stats.endtime)
+        c2 = inventory.get_coordinates(
+                stream2[0].id, datetime=stream2[0].stats.endtime)
         args = (c1['latitude'], c1['longitude'],
                 c2['latitude'], c2['longitude'])
         dist, azi, baz = gps2dist_azimuth(*args)
-        # correlate sliding streams
-        xstream = obspy.Stream()
-        for t1 in IterTime(day, next_day - length + overlap,
-                           dt=length - overlap):
-            sub = obspy.Stream([tr1, tr2]).slice(t1, t1 + length)
-            if len(sub) < 2:
+        if 'R' in components or 'T' in components and station1 != station2:
+            stream1 = stream1.copy()
+            stream1b = stream1.copy().rotate('NE->RT', azi)
+            stream1.extend(stream1b.select(channel='R'))
+            stream1.extend(stream1b.select(channel='T'))
+            stream2 = stream2.copy()
+            stream2b = stream2.copy().rotate('NE->RT', azi)
+            stream2.extend(stream2b.select(channel='R'))
+            stream2.extend(stream2b.select(channel='T'))
+        it_ = (itertools.product(stream1, stream2) if station1 != station2 else
+               itertools.combinations_with_replacement(stream1, 2))
+        for tr1, tr2 in it_:
+            comps = tr1.stats.channel[-1] + tr2.stats.channel[-1]
+            if component_combinations and (
+                    comps not in component_combinations and
+                    comps[::-1] not in component_combinations):
                 continue
-            st = [tr.stats.starttime for tr in sub]
-            et = [tr.stats.endtime for tr in sub]
-            if max(st) > min(et):
-                continue
-            sub.trim(max(st), min(et))
-            if discard and any(
-                    (tr.data.count() if hasattr(tr.data, 'count') else len(tr))
-                    / tr.stats.sampling_rate / length < discard for tr in sub):
-                continue
-            for tr in sub:
-                _fill_array(tr.data, fill_value=0.)
-                tr.data = np.ma.getdata(tr.data)
-            xtr = correlate_traces(sub[0], sub[1], max_lag)
-            xtr.stats.starttime = t1
-            xtr.stats.key = outkey
-            xtr.stats.dist = dist
-            xtr.stats.azi = azi
-            xtr.stats.baz = baz
-            xstream += xtr
-        # write and/or stack stream
-        if len(xstream) > 0:
-            if keep_correlations:
-                correlate.q.put((xstream, io['corr']))
-            if stack:
-                xstack = yam.stack.stack(xstream, stack)
-                correlate.q.put((xstack, io['stack']))
+            xstream = obspy.Stream()
+            for t1 in IterTime(day, next_day - length + overlap,
+                               dt=length - overlap):
+                sub = obspy.Stream([tr1, tr2]).slice(t1, t1 + length)
+                if len(sub) < 2:
+                    continue
+                st = [tr.stats.starttime for tr in sub]
+                et = [tr.stats.endtime for tr in sub]
+                if max(st) > min(et):
+                    continue
+                sub.trim(max(st), min(et))
+                if discard and any(
+                        (tr.data.count() if hasattr(tr.data, 'count')
+                         else len(tr))
+                        / tr.stats.sampling_rate / length < discard
+                        for tr in sub):
+                    continue
+                for tr in sub:
+                    _fill_array(tr.data, fill_value=0.)
+                    tr.data = np.ma.getdata(tr.data)
+                xtr = correlate_traces(sub[0], sub[1], max_lag)
+                xtr.stats.starttime = t1
+                xtr.stats.key = outkey
+                xtr.stats.dist = dist
+                xtr.stats.azi = azi
+                xtr.stats.baz = baz
+                xstream += xtr
+            # write and/or stack stream
+            if len(xstream) > 0:
+                if keep_correlations:
+                    correlate.q.put((xstream, io['corr']))
+                if stack:
+                    xstack = yam.stack.stack(xstream, stack)
+                    correlate.q.put((xstack, io['stack']))
+
+#    Loop before introduction of rotation
+#    for tr1, tr2 in itertools.combinations_with_replacement(stream, 2):
+#        # skip unwanted combinations
+#        station1 = tr1.stats.network + '.' + tr1.stats.station
+#        station2 = tr2.stats.network + '.' + tr2.stats.station
+#        comps = tr1.stats.channel[-1] + tr2.stats.channel[-1]
+#        if only_auto_correlation and station1 != station2:
+#            continue
+#        if station_combinations and not any(set(station_comb.split('-')) == (
+#                {station1, station2} if '.' in (station_comb) else
+#                {tr1.stats.station, tr2.stats.station})
+#                for station_comb in station_combinations):
+#            continue
+#        if component_combinations and (
+#                comps not in component_combinations and
+#                comps[::-1] not in component_combinations):
+#            continue
+#        # calculate distance and azimuth
+#        c1 = inventory.get_coordinates(tr1.id, datetime=tr1.stats.endtime)
+#        c2 = inventory.get_coordinates(tr2.id, datetime=tr2.stats.endtime)
+#        args = (c1['latitude'], c1['longitude'],
+#                c2['latitude'], c2['longitude'])
+#        dist, azi, baz = gps2dist_azimuth(*args)
+#        # correlate sliding streams
+#        xstream = obspy.Stream()
+#        for t1 in IterTime(day, next_day - length + overlap,
+#                           dt=length - overlap):
+#            sub = obspy.Stream([tr1, tr2]).slice(t1, t1 + length)
+#            if len(sub) < 2:
+#                continue
+#            st = [tr.stats.starttime for tr in sub]
+#            et = [tr.stats.endtime for tr in sub]
+#            if max(st) > min(et):
+#                continue
+#            sub.trim(max(st), min(et))
+#            if discard and any(
+#                    (tr.data.count() if hasattr(tr.data, 'count') else len(tr))
+#                    / tr.stats.sampling_rate / length < discard for tr in sub):
+#                continue
+#            for tr in sub:
+#                _fill_array(tr.data, fill_value=0.)
+#                tr.data = np.ma.getdata(tr.data)
+#            xtr = correlate_traces(sub[0], sub[1], max_lag)
+#            xtr.stats.starttime = t1
+#            xtr.stats.key = outkey
+#            xtr.stats.dist = dist
+#            xtr.stats.azi = azi
+#            xtr.stats.baz = baz
+#            xstream += xtr
+#        # write and/or stack stream
+#        if len(xstream) > 0:
+#            if keep_correlations:
+#                correlate.q.put((xstream, io['corr']))
+#            if stack:
+#                xstack = yam.stack.stack(xstream, stack)
+#                correlate.q.put((xstack, io['stack']))
